--- a/myminglzApp/.gitignore
+++ b/myminglzApp/.gitignore
@@ -2,6 +2,15 @@
 #
 .DS_Store
 
+# environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.development
+.env.test
+
 # Xcode
 #
 build/
@@ -79,3 +88,4 @@ yarn-error.log
 
 # vscode
 .vscode/*
+.env
