--- a/beta/package.json
+++ b/beta/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.7",
+    "@googlemaps/react-wrapper": "^1.2.0",
     "@next/third-parties": "^15.0.3",
+    "@react-google-maps/api": "^2.20.7",
     "@react-spring/three": "^9.7.5",
     "@supabase/supabase-js": "^2.43.5",
     "@use-gesture/react": "^10.3.1",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
+    "@vis.gl/react-google-maps": "^1.5.5",
     "axios": "^1.7.2",
     "browser-image-compression": "^2.0.2",
     "classnames": "^2.5.1",
@@ -49,6 +52,7 @@
     "@next/bundle-analyzer": "^14.0.4",
     "@svgr/webpack": "^8.1.0",
     "@types/classnames": "^2.3.1",
+    "@types/google.maps": "^3.58.1",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-beautiful-dnd": "^13.1.8",
